Continued CSS edits.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <div class="project-logo">
             <img src="images/verve-logo.png">
           </div>
-          <p>Verve for iOS is a cloud storage app that promotes good health and wellness through organization and collaboration.</p>
+          <p>Verve for iOS is a cloud storage app that makes it easier for users to manage a healthy lifestyle while staying organized.</p>
           <button onclick="window.location.href = 'project.html';">READ MORE</button>
 
         </section>
