--- a/project.html
+++ b/project.html
@@ -31,7 +31,7 @@
           <div class="project-page-logo">
             <img src="images/verve-logo.png">
           </div>
-          <p>Verve is a cloud storage app that makes it easier for users to manage a healthy lifestyle while staying organized.</p>
+          <p>Verve for iOS is a cloud storage app that makes it easier for users to manage a healthy lifestyle while staying organized.</p>
           <button onclick="window.location.href = 'project.html';">VIEW THE PROTOTYPE</button>
         </section>
 
@@ -359,7 +359,7 @@
             </div>
             <div class = "sketches">
               <h3>Sketches, Lo- Fidelity Wireframes & Prototype</h3>
-              <p>I found that there were screens that should be consolidated, some that were not useful and some that were overlooked in sketching, such as the difference between the dashboard of a new user vs that of a returning user and the view of a text Input window after a user enters the text and before they proceed to click a link. As a result, my sketches are different from my  lo-fi wireframes but reflect a series of digital iterations after these discoveries and review during a design critique.</p>
+              <p>I found that there were screens that should be consolidated, some that were not useful and some that were overlooked in sketching, such as the difference between the dashboard of a new user vs that of a returning user and the view of a text input window after a user enters the text and before they proceed to click a link. As a result, my sketches are different from my  lo-fi wireframes but reflect a series of digital iterations after these discoveries and review during a design critique.</p>
               <img class = "early-image"src = "images/Sketches and Wireframes/early-sketch-wireframe.png"</img>
               <img class = "wireframe1" src = "images/Sketches and Wireframes/activity-wireframe.png"</img>
               <img class = "wireframe2" src = "images/Sketches and Wireframes/existing-user-dashboard-wireframe.png"</img>
@@ -387,7 +387,7 @@
             <h2>Branding</h2>
             <div class = "brainstorming">
               <h3>Naming: Brainstorming and mindmapping</h3>
-              <p>I engaged in brainstorming and mindmapping exercised to narrow down naming ideas and settled on Verve because it was a short moniker that embodied he clean energy and vitality the app needed to project.</p>
+              <p>I engaged in brainstorming and mindmapping exercised to narrow down naming ideas and settled on Verve because it was a short moniker that embodied the clean energy and vitality the app needed to project.</p>
               <p>The branding should reflect the app’s positioning at the intersection of self care and data while maintaining a clean and sleek interface. </p>
               <img class = "branding-idea" src = "images/Branding/vibrant-color.png"</img>
               <img class = "branding-idea"  src = "images/Branding/ultra-personal.png"</img>
@@ -482,28 +482,39 @@
         </section>
 
         <nav class ="bottom-nav">
-            <img  class = "top" src ="images/icons/top.png"</img>
-            <h4 class = "top-text" >top</h4>
-            <h4 class = "next-text">next project</h4>
-            <img class = "next" src ="images/icons/right-arrow.png"</img>
+          <Table class = "bottom">
+            <tr>
+              <td class = "top">
+                <img src ="images/icons/top.png"</img>
+              </td>
+              <td>
+                <h4 class = "top-text" >top</h4>
+              </td>
+              <td>
+                <h4 class = "next-text">next project</h4>
+              </td>
+              <td>
+                <img class = "next" src ="images/icons/right-arrow.png"</img>
+              </td>
+          </table>
         </nav>
 
         <footer class="verve-footer">
           <h1 class="verve-footer-header">Let's Work Together!</h1>
           <div class="verve-footer-links">
-              <a href="{linkedin.com/in/jessdesignedit}">
+              <a href="https://www.linkedin.com/in/jessdesignedit">
                 <img src=images/icons/icons8-linkedin-2-500.png>
                 </a>
-              <a href="{github.com/jessblanchard}">
+              <a href="https://www.github.com/jessblanchard">
                 <img src="images/icons/icons8-github-500.png">
                 </a>
-              <a href="{instagram.com/jessytribble}">
+              <a href="https://www.instagram.com/jessytribble">
                 <img src=images/icons/icons8-instagram-camera-500.png>
                 </a>
-              <a href="{twitter.com/jesstribble}">
+              <a href="https://www.twitter.com/jesstribble">
                 <img src= images/icons/icons8-twitter-500.png>
                 </a>
-              <a href="mailto:{jessicahtribble@gmail.com}">
+              <a href="mailto:jessicahtribble@gmail.com">
                 <img src=images/icons/icons8-email-envelope-500.png>
                 </a>
           </div>
