CSS mostly complete, need to reduce width on several images to 325px.

--- a/project.html
+++ b/project.html
@@ -36,58 +36,58 @@
         </section>
 
         <section class="bulletpoints">
-
-          <div class = "roles">
-            <h1>Roles</h1>
-            <ul class = roles>
-              <li>
-                <p>User Researcher</p>
-              <li>
-                <p>UX Design</p>
-              <li>
-                <p>Visual Design</p>
-              <li>
-                <p>Branding & Identity</p>
-            </ul>
-          </div>
-          <div class = "deliverables">
-            <h1>Deliverables</h1>
-            <ul class = deliverables>
-              <li>
-                <p>Competitive Analysis</p>
-              <li>
-                <p>User Surveys</p>
-              <li>
-                <p>User Personas</p>
-              <li>
-                <p>User Stories & Flows</p>
-              <li>
-                <p>Wireframes</p>
-              <li>
-                <p>User Testing</p>
-              <li>
-                <p>Brand Identity</p>
-              <li>
-                <p>Visual Design</p>
-              <li>
-                <p>Hi-Fidelity Prototype</p>
+          <div class=bulletpoints-content>
+            <div class = "roles">
+              <h1>Roles</h1>
+              <ul class = "roles-list">
+                <li>
+                  <p>User Researcher</p>
+                <li>
+                  <p>UX Design</p>
+                <li>
+                  <p>Visual Design</p>
+                <li>
+                  <p>Branding & Identity</p>
               </ul>
+            </div>
+            <div class = "deliverables">
+              <h1>Deliverables</h1>
+              <ul class = "deliverables-list">
+                <li>
+                  <p>Competitive Analysis</p>
+                <li>
+                  <p>User Surveys</p>
+                <li>
+                  <p>User Personas</p>
+                <li>
+                  <p>User Stories & Flows</p>
+                <li>
+                  <p>Wireframes</p>
+                <li>
+                  <p>User Testing</p>
+                <li>
+                  <p>Brand Identity</p>
+                <li>
+                  <p>Visual Design</p>
+                <li>
+                  <p>Hi-Fidelity Prototype</p>
+                </ul>
+            </div>
+            <div class = "tools-used">
+              <h1>Tools Used</h1>
+              <ul class = "tools-list">
+                <li>
+                  <p>Survey Monkey</p>
+                <li>
+                  <p>Figma</p>
+                <li>
+                  <p>Marvel</p>
+                <li>
+                  <p>Maze</p>
+                <li>
+                  <p>Usability Hub</p>
+            </div>
           </div>
-          <div class = "tools-used">
-            <h1>Tools Used</h1>
-            <ul class = tools-used>
-              <li>
-                <p>Survey Monkey</p>
-              <li>
-                <p>Figma</p>
-              <li>
-                <p>Marvel</p>
-              <li>
-                <p>Maze</p>
-              <li>
-                <p>Usability Hub</p>
-          </div>
-
         </section>
 
         <section class="tldr">
@@ -150,7 +150,7 @@
                 <img src = "images/angelica-persona.svg">
                 <!-- <img class = "angelica-pic" src="images/Personas/Angelica.png">
                 <div class = "molly-text">
-                  <h1>Angelica,  38</h1>
+                  <h1>Angelica, 38</h1>
                   <h3>Lifestyle Blogger & Wellness Consultant</h3>
                   <p><strong class = "persona"></strong>Bio: Angelica is a 38 year old health and wellness lifestyle blogger. She uses cloud storage to keep her notes and ideas organized, collaborate with her team and share resources and plans with her private consulting clients. She works hard and would like to apply as much organization the wellness of her and her clients as she does to the business of her work.</p>
                   <p><strong class = "persona"></strong>Goals: Getting work done, efficiently, affordably and mindfully</p>
@@ -228,7 +228,7 @@
 
               </table>
             </div>
-          </section>
+        </section>
 
         <section class= "information-architecture">
             <h2> Information architecture</h2>
