Beginning responsive design with media queries.

--- a/index.html
+++ b/index.html
@@ -12,64 +12,65 @@
   </head>
 
   <body>
-    <div class="container">
+
       <nav class="navigation">
         <a class="navigation-logo" href="index.html">
             <img src="images/jess-logo-blue.png" width="62" height="81.78" border="0" alt="" style="padding:0px;">
           </a>
-        <a class="navigation-work" href="project.html">Work</a>
-        <a class="navigation-about" href="">About</a>
-        <a class="navigation-resume" href="">Resume</a>
+        <div class = "nav-links">
+          <a class="navigation-work" href="project.html">Work</a>
+          <a class="navigation-about" href="">About</a>
+          <a class="navigation-resume" href="">Resume</a>
+        </div>
       </nav>
 
-        <section class="hero">
+      <section class="hero">
           <h1>Hi! I’m Jess,<h1>
           <h2>a UX designer and brand strategist from NYC. I specialize in creating <strong class = "hero-emphasis"> unique</strong> and <strong class = "hero-emphasis">personal</strong> digital experiences.</h2>
         </section>
 
-        <section class="recent-work">
+      <section class="recent-work">
           <h1>Recent Work</h1>
-          <div class="project-image">
-            <img src="images/verve-thumbnail.png" width="323" height="323">
+          <div>
+            <img class="project-image" src="images/verve-thumbnail.png" width="323" height="323">
           </div>
-          <div class="project-logo">
-            <img src="images/verve-logo.png">
+          <div >
+            <img class="project-logo" src="images/verve-logo.png">
           </div>
           <p>Verve for iOS is a cloud storage app that makes it easier for users to manage a healthy lifestyle while staying organized.</p>
           <button onclick="window.location.href = 'project.html';">READ MORE</button>
-
         </section>
 
-        <section class="about-me">
-          <h1>About Me</h1>
-          <div class=personal-image>
-            <img src="images/jb-headshot2.svg">
-          </div>
-          <p>Hi, I’m Jessica Blanchard, designer and brand strategist. I’m also an urban homesteader, hedge lover, Persian cat (and boy) mom, true crime enthusiast, contemporary art collector and prison reform crusader. I’m passionate about giving back and designing solutions that make community service inherent to every day life. I enjoy designing nuanced solutions that make the internet more enjoyable.</p>
-          <button>LEARN MORE</button>
-        </section>
+      <section class="about-me">
+        <h1>About Me</h1>
+        <div class=personal-image>
+          <img src="images/jb-headshot2.svg">
+        </div>
+        <p>Hi, I’m Jessica Blanchard, designer and brand strategist. I’m also an urban homesteader, hedge lover, Persian cat (and boy) mom, true crime enthusiast, contemporary art collector and prison reform crusader. I’m passionate about giving back and designing solutions that make community service inherent to every day life. I enjoy designing nuanced solutions that make the internet more enjoyable.</p>
+        <button>LEARN MORE</button>
+      </section>
 
-        <footer class="footer">
-          <h1 class="footer-header">Let's Work Together!</h1>
-          <div class="footer-links">
-              <a href="{linkedin.com/in/jessdesignedit}">
-                <img src=images/icons/icons8-linkedin-2-500.png>
-                </a>
-              <a href="{github.com/jessblanchard}">
-                <img src="images/icons/icons8-github-500.png">
-                </a>
-              <a href="{instagram.com/jessytribble}">
-                <img src=images/icons/icons8-instagram-camera-500.png>
-                </a>
-              <a href="{twitter.com/jesstribble}">
-                <img src= images/icons/icons8-twitter-500.png>
-                </a>
-              <a href="mailto:{jessicahtribble@gmail.com}">
-                <img src=images/icons/icons8-email-envelope-500.png>
-                </a>
-          </div>
-          <p class="footer-text">designed and developed by Jessica Blanchard</p>
-        </footer>
-    </div>
+      <footer class="footer">
+        <h1 class="footer-header">Let's Work Together!</h1>
+        <div class="footer-links">
+            <a href="{linkedin.com/in/jessdesignedit}">
+              <img src=images/icons/icons8-linkedin-2-500.png>
+              </a>
+            <a href="{github.com/jessblanchard}">
+              <img src="images/icons/icons8-github-500.png">
+              </a>
+            <a href="{instagram.com/jessytribble}">
+              <img src=images/icons/icons8-instagram-camera-500.png>
+              </a>
+            <a href="{twitter.com/jesstribble}">
+              <img src= images/icons/icons8-twitter-500.png>
+              </a>
+            <a href="mailto:{jessicahtribble@gmail.com}">
+              <img src=images/icons/icons8-email-envelope-500.png>
+              </a>
+        </div>
+        <p class="footer-text">designed and developed by Jessica Blanchard</p>
+      </footer>
+
   </body>
 </html>
