--- a/project.html
+++ b/project.html
@@ -19,9 +19,11 @@
           <a class="navigation-logo" href="index.html">
               <img src="images/jess-logo-blue.png" width="62" height="81.78" border="0" alt="" style="padding:0px;">
             </a>
-          <a class="navigation-work" href="project.html">Work</a>
-          <a class="navigation-about" href="">About</a>
-          <a class="navigation-resume" href="">Resume</a>
+          <div class= "nav-links">
+            <a class="navigation-work" href="project.html">Work</a>
+            <a class="navigation-about" href="">About</a>
+            <a class="navigation-resume" href="">Resume</a>
+          </div>
         </nav>
 
         <section class="project-title">
