--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <body>
 
       <nav class="navigation">
-        <a class="navigation-logo" href="index.html">
-            <img src="images/jess-logo-blue.png" width="62" height="81.78" border="0" alt="" style="padding:0px;">
+        <a href="index.html">
+            <img class="navigation-logo" src="images/jess-logo-blue.png" width="62" height="81.78" border="0" alt="" style="padding:0px;">
           </a>
         <div class = "nav-links">
           <a class="navigation-work" href="project.html">Work</a>
@@ -43,8 +43,8 @@
 
       <section class="about-me">
         <h1>About Me</h1>
-        <div class=personal-image>
-          <img src="images/jb-headshot2.svg">
+        <div>
+          <img class=personal-image src="images/jb-headshot2.svg">
         </div>
         <p>Hi, I’m Jessica Blanchard, designer and brand strategist. I’m also an urban homesteader, hedge lover, Persian cat (and boy) mom, true crime enthusiast, contemporary art collector and prison reform crusader. I’m passionate about giving back and designing solutions that make community service inherent to every day life. I enjoy designing nuanced solutions that make the internet more enjoyable.</p>
         <button>LEARN MORE</button>
@@ -71,6 +71,5 @@
         </div>
         <p class="footer-text">designed and developed by Jessica Blanchard</p>
       </footer>
-
   </body>
 </html>
