--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 
   <body>
 
-      <nav class="navigation">
+      <header class="navigation">
         <a href="index.html">
-            <img class="navigation-logo" src="images/jess-logo-blue.png" width="62" height="81.78" border="0" alt="" style="padding:0px;">
-          </a>
+          <img class="navigation-logo" src="images/jess-logo-blue.png" width="62" height="81.78" border="0" alt="" style="padding:0px;">
+        </a>
         <div class = "nav-links">
           <a class="navigation-work" href="project.html">Work</a>
           <a class="navigation-about" href="">About</a>
           <a class="navigation-resume" href="">Resume</a>
         </div>
-      </nav>
+      </header>
 
       <section class="hero">
           <h1>Hi! I’m Jess,<h1>
