--- a/indexgridversion.html
+++ b/indexgridversion.html
@@ -8,39 +8,36 @@
     <link rel= stylesheet href="styles/reset.css">
     <!-- Custom Styles -->
     <link rel="stylesheet" href="styles/maingridversion.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
 
-  <body>
+  <body class = "homepage">
 
       <header class="navigation">
-        <div class = logo>
-          <a href="indexgridversion.html">
+        <a class = "logo" href="indexgridversion.html">
           <img class="navigation-logo" src="images/jess-logo-blue.png" width="62" height="81.78" border="0" alt="" style="padding:0px;">
           </a>
-        </div>
-        <div class = "nav-links">
-          <a class="navigation-work" href="project.html">Work</a>
-          <a class="navigation-about" href="">About</a>
-          <a class="navigation-resume" href="">Resume</a>
-        </div>
+        <a class="navigation-work" href="project.html">Work</a>
+        <a class="navigation-about" href="">About</a>
+        <a class="navigation-resume" href="">Resume</a>
       </header>
 
       <section class="hero">
-          <h1>Hi! I’m Jess,<h1>
+          <h1>Hi, I'm Jess</h1>
           <h2>a UX designer and brand strategist from NYC. I specialize in creating <strong class = "hero-emphasis"> unique</strong> and <strong class = "hero-emphasis">personal</strong> digital experiences.</h2>
         </section>
 
       <section class="recent-work">
           <h1>Recent Work</h1>
-          <div>
-            <img class="project-image" src="images/verve-thumbnail.png" width="323" height="323">
+          <div class = "project-image">
+            <img class="verve-image" src="images/verve-thumbnail.png" width="323" height="323">
           </div>
-          <div >
-            <img class="project-logo" src="images/verve-logo.png">
+          <div class = "project-details">
+            <div>
+              <img class="project-logo" src="images/verve-logo.png">
+            </div>
+            <p>Verve for iOS is a cloud storage app that makes it easier for users to manage a healthy lifestyle while staying organized.</p>
+            <button onclick="window.location.href = 'project.html';">READ MORE</button>
           </div>
-          <p>Verve for iOS is a cloud storage app that makes it easier for users to manage a healthy lifestyle while staying organized.</p>
-          <button onclick="window.location.href = 'project.html';">READ MORE</button>
         </section>
 
       <section class="about-me">
