continuing CSS gris on homepage

--- a/indexgridversion.html
+++ b/indexgridversion.html
@@ -22,7 +22,7 @@
       </header>
 
       <section class="hero">
-          <h1>Hi, I'm Jess</h1>
+          <h1>Hi! I'm Jess,</h1>
           <h2>a UX designer and brand strategist from NYC. I specialize in creating <strong class = "hero-emphasis"> unique</strong> and <strong class = "hero-emphasis">personal</strong> digital experiences.</h2>
         </section>
 
@@ -42,7 +42,7 @@
 
       <section class="about-me">
         <h1>About Me</h1>
-        <div>
+        <div class = "homepage-portrait">
           <img class=personal-image src="images/jb-headshot2.svg">
         </div>
         <p>Hi, I’m Jessica Blanchard, designer and brand strategist. I’m also an urban homesteader, hedge lover, Persian cat (and boy) mom, true crime enthusiast, contemporary art collector and prison reform crusader. I’m passionate about giving back and designing solutions that make community service inherent to every day life. I enjoy designing nuanced solutions that make the internet more enjoyable.</p>
