--- a/indexgridversion.html
+++ b/indexgridversion.html
@@ -16,8 +16,8 @@
         <a class = "logo" href="indexgridversion.html">
           <img class="navigation-logo" src="images/jess-logo-blue.png" width="62" height="81.78" border="0" alt="" style="padding:0px;">
           </a>
-        <a class="navigation-work" href="project.html">Work</a>
-        <a class="navigation-about" href="">About</a>
+        <a class="navigation-work" href="projectgridversion.html">Work</a>
+        <a class="navigation-about" href="about.html">About</a>
         <a class="navigation-resume" href="">Resume</a>
       </header>
 
@@ -26,8 +26,11 @@
           <h2>a UX designer and brand strategist from NYC. I specialize in creating <strong class = "hero-emphasis"> unique</strong> and <strong class = "hero-emphasis">personal</strong> digital experiences.</h2>
         </section>
 
+      <div class = "recent-work-header">
+        <h1>Recent Work</h1>
+      </div>
+
       <section class="recent-work">
-          <h1>Recent Work</h1>
           <div class = "project-image">
             <img class="verve-image" src="images/verve-thumbnail.png" width="323" height="323">
           </div>
@@ -40,13 +43,21 @@
           </div>
         </section>
 
-      <section class="about-me">
+      <div class = "about-me-header">
         <h1>About Me</h1>
-        <div class = "homepage-portrait">
+      </div>
+
+      <section class="about-me">
+        <!-- <h1>About Me</h1> -->
+        <div class = "about-me-image">
+          <div class = "homepage-portrait">
           <img class=personal-image src="images/jb-headshot2.svg">
         </div>
-        <p>Hi, I’m Jessica Blanchard, designer and brand strategist. I’m also an urban homesteader, hedge lover, Persian cat (and boy) mom, true crime enthusiast, contemporary art collector and prison reform crusader. I’m passionate about giving back and designing solutions that make community service inherent to every day life. I enjoy designing nuanced solutions that make the internet more enjoyable.</p>
-        <button>LEARN MORE</button>
+          </div>
+        <div class = "about-me-details">
+          <p>Hi, I’m Jessica Blanchard, designer and brand strategist. I’m also an urban homesteader, hedge lover, Persian cat (and boy) mom, true crime enthusiast, contemporary art collector and prison reform crusader. I’m passionate about giving back and designing solutions that make community service inherent to every day life. I enjoy designing nuanced solutions that make the internet more enjoyable.</p>
+          <button>LEARN MORE</button>
+        </div>
       </section>
 
       <footer class="footer">
