small updates to text content of homepage bio

--- a/indexgridversion.html
+++ b/indexgridversion.html
@@ -55,7 +55,7 @@
         </div>
           </div>
         <div class = "about-me-details">
-          <p>Hi, I’m Jessica Blanchard, designer and brand strategist. I’m also an urban homesteader, hedge lover, Persian cat (and boy) mom, true crime enthusiast, contemporary art collector and prison reform crusader. I’m passionate about giving back and designing solutions that make community service inherent to every day life. I enjoy designing nuanced solutions that make the internet more enjoyable.</p>
+          <p>Hi, I’m Jessica Blanchard, user experience designer and brand strategist. I’m also an urban homesteader, Persian cat and boy mom, true crime sleuth, contemporary art collector and prison reform advocate. I’m passionate about designing solutions for real people, driven by real research and data. I work to make the internet a healthier place, while still <strike>driving</strike> crushing business goals.</p>
           <button>LEARN MORE</button>
         </div>
       </section>
