Major progress on refactoring case study.

--- a/projectgridversion.html
+++ b/projectgridversion.html
@@ -104,17 +104,14 @@
           </div>
           </section>
 
-        <section class = "discovery">
 
-          <div class = "discovery-indented1">
+
+        <div class = "discovery-section1">
             <h2>Discovery & Research</h2>
             <div class ="user-survey">
                 <h3>User Survey</h3>
                 <p>I embarked on the project by first surveying a group of participants to better understand how they use cloud storage.</p>
             </div>
-          </div>
-
-          <div class = "discovery-fullwidth2">
             <table class="survey-chart">
                   <tr>
                     <td class = "chart-header">67%</td>
@@ -133,48 +130,40 @@
                     <td class = "chart-body">would pay more for advanced <strong class = "chart-emphasis">features</strong></td>
                   </tr>
                   </table>
-          </div>
-
-          <div class = "discovery-indented3">
             <div class = "user-personas">
                 <h3>User Personas</h3>
                 <p>The survey provided great insight into the attitudes and opinions of potential users, and I constructed two personas based on the survey responses to represent the trends I spotted.</p>
             </div>
           </div>
+        <div class = "discovery-section2">
+          <img class = "molly" src = "images/molly-persona.svg"></img>
+              <!-- <img class = "molly-pic" src="images/Personas/Molly.png">
+              <div class = "molly-text">
+                  <h1>Molly, 30</h1>
+                  <h3>Graphic Designer</h3>
+                  <p><strong class = "persona">Bio:</strong> Molly is a 30 year old creative solopreneur based in New York. As a a digital nomad and needs her documents to be accessible anywhere she goes. She is increasingly applying a cloud mentality to other aspects of her life and wants access to inspiring documentation and communication on the go at any time.</p>
+                  <p><strong class = "persona">Goals:</strong> Stay organized; stay up to date and on trend.</p>
+                  <p><strong class = "persona">Frustrations:</strong> Too many restrictions, corporate oversight and an uninspiring UI</p>
+                  <p><strong class = "persona">Motivations:</strong> Clean simplicity, flexibility and inspiration to create</p>
+                  <p><strong class = "persona">Quote:</strong> “My documents may be organized, but I’d like to “keep that same energy” outside of my work too.”</p>
+              </div> -->
+              <img class = "angelica" src = "images/angelica-persona.svg"></img>
+              <!-- <img class = "angelica-pic" src="images/Personas/Angelica.png">
+              <div class = "molly-text">
+                <h1>Angelica, 38</h1>
+                <h3>Lifestyle Blogger & Wellness Consultant</h3>
+                <p><strong class = "persona"></strong>Bio: Angelica is a 38 year old health and wellness lifestyle blogger. She uses cloud storage to keep her notes and ideas organized, collaborate with her team and share resources and plans with her private consulting clients. She works hard and would like to apply as much organization the wellness of her and her clients as she does to the business of her work.</p>
+                <p><strong class = "persona"></strong>Goals: Getting work done, efficiently, affordably and mindfully</p>
+                <p><strong class = "persona"></strong>Frustrations: The cost of scaling up</p>
+                <p><strong class = "persona"></strong>Motivations: Efficiency, collaboration and advanced features from a provider I can trust</p>
+                <p><strong class = "persona"></strong>Quote: “My clients deserves the same level of care that I would give myself.”</p>
+              </div> -->
 
-          <div class = "discovery-fullwidth4">
-                  <div class="molly">
-                    <img src = "images/molly-persona.svg">
-                    <!-- <img class = "molly-pic" src="images/Personas/Molly.png">
-                    <div class = "molly-text">
-                        <h1>Molly, 30</h1>
-                        <h3>Graphic Designer</h3>
-                        <p><strong class = "persona">Bio:</strong> Molly is a 30 year old creative solopreneur based in New York. As a a digital nomad and needs her documents to be accessible anywhere she goes. She is increasingly applying a cloud mentality to other aspects of her life and wants access to inspiring documentation and communication on the go at any time.</p>
-                        <p><strong class = "persona">Goals:</strong> Stay organized; stay up to date and on trend.</p>
-                        <p><strong class = "persona">Frustrations:</strong> Too many restrictions, corporate oversight and an uninspiring UI</p>
-                        <p><strong class = "persona">Motivations:</strong> Clean simplicity, flexibility and inspiration to create</p>
-                        <p><strong class = "persona">Quote:</strong> “My documents may be organized, but I’d like to “keep that same energy” outside of my work too.”</p>
-                    </div> -->
-                  </div>
-                  <div class="angelica">
-                    <img src = "images/angelica-persona.svg">
-                    <!-- <img class = "angelica-pic" src="images/Personas/Angelica.png">
-                    <div class = "molly-text">
-                      <h1>Angelica, 38</h1>
-                      <h3>Lifestyle Blogger & Wellness Consultant</h3>
-                      <p><strong class = "persona"></strong>Bio: Angelica is a 38 year old health and wellness lifestyle blogger. She uses cloud storage to keep her notes and ideas organized, collaborate with her team and share resources and plans with her private consulting clients. She works hard and would like to apply as much organization the wellness of her and her clients as she does to the business of her work.</p>
-                      <p><strong class = "persona"></strong>Goals: Getting work done, efficiently, affordably and mindfully</p>
-                      <p><strong class = "persona"></strong>Frustrations: The cost of scaling up</p>
-                      <p><strong class = "persona"></strong>Motivations: Efficiency, collaboration and advanced features from a provider I can trust</p>
-                      <p><strong class = "persona"></strong>Quote: “My clients deserves the same level of care that I would give myself.”</p>
-                    </div> -->
-                  </div>
-            </div>
-
-          <div class = "discovery-indented5">
+          </div>
+        <div class = "discovery-section3">
             <div class = "competitive-analysis">
                 <h3>Competitive Analysis</h3>
-                <p>I analyzed four competitors, Google Drive, Dropbox, Flöka and LovelyLoot . The most important revelation was that while general providers are overlooking niches, niche providers are severely limiting functionality. Neither provides  both general use and opportunity for specialization.
+                <p>I analyzed four competitors, Google Drive, Dropbox, Lovelyloot and Flöka and LovelyLoot. The most important revelation was that while general providers are overlooking niches, niche providers are severely limiting functionality. Neither provides  both general use and opportunity for specialization.
                   </p>
                 <table class="swot-chart">
                   <td class = "swot-logo1" colspan="4">
@@ -242,7 +231,7 @@
               </div>
           </div>
 
-        </section>
+
 
         <section class = "information-architecture-indented1">
           <h2> Information architecture</h2>
@@ -255,7 +244,7 @@
           <table class = "user-stories">
                 <tr class = "table-peach">
                   <td class ="story-role">
-                    As a new user
+                    As a new user,
                   </td>
                   <td class ="story-activity">
                     I want to sign up
@@ -263,7 +252,7 @@
                 </tr>
                 <tr>
                   <td class ="story-role">
-                    As a new user
+                    As a new user,
                   </td>
                   <td class ="story-activity">
                     I want to upload a file or folder from a device
@@ -271,7 +260,7 @@
                 </tr>
                 <tr class = "table-peach">
                   <td class ="story-role">
-                    As a new user
+                    As a new user,
                   </td>
                   <td class ="story-activity">
                     I want to upload content from the web
@@ -279,7 +268,7 @@
                 </tr>
                 <tr>
                   <td class ="story-role">
-                    As a new user
+                    As a new user,
                   </td>
                   <td  class ="story-activity">
                     I want to create a new folder
@@ -287,7 +276,7 @@
                 </tr>
                 <tr class = "table-peach">
                   <td class ="story-role">
-                    As a new user
+                    As a new user,
                   </td>
                   <td class ="story-activity">
                     I want to tag or group content
@@ -295,7 +284,7 @@
                 </tr>
                 <tr>
                   <td class ="story-role">
-                    As a new user
+                    As a new user,
                   </td>
                   <td class ="story-activity">
                     I want to create content
@@ -303,7 +292,7 @@
                 </tr>
                 <tr class = "table-peach">
                   <td class ="story-role">
-                    As a returning user
+                    As a returning user,
                   </td>
                   <td class ="story-activity">
                     I want to view existing files or folders
@@ -311,7 +300,7 @@
                 </tr>
                 <tr>
                   <td class ="story-role">
-                    As a returning user
+                    As a returning user,
                   </td>
                   <td class ="story-activity">
                     I want to view collaboration from other users
@@ -319,7 +308,7 @@
                 </tr>
                 <tr class = "table-peach">
                   <td class ="story-role">
-                    As a returning user
+                    As a returning user,
                   </td>
                   <td class ="story-activity">
                     I want to provide collaboration to other users
@@ -327,7 +316,7 @@
                 </tr>
                 <tr>
                   <td class ="story-role">
-                    As a returning user
+                    As a returning user,
                   </td>
                   <td class ="story-activity">
                     I want to share content with a collaborator
@@ -335,7 +324,7 @@
                 </tr>
                 <tr class = "table-peach">
                   <td class ="story-role">
-                    As a returning user
+                    As a returning user,
                   </td>
                   <td class ="story-activity">
                     I want to add and remover users
@@ -343,7 +332,7 @@
                 </tr>
                 <tr>
                   <td class ="story-role">
-                    As a returning user
+                    As a returning user,
                   </td>
                   <td class ="story-activity">
                     I want to adjust permissions for users
@@ -351,7 +340,7 @@
                 </tr>
                 <tr class = "table-peach">
                   <td class ="story-role">
-                    As a returning user
+                    As a returning user,
                   </td>
                   <td class ="story-activity">
                     I want to share content to social media
@@ -374,15 +363,17 @@
           <img class = "onboard-flow" src="images/User Flow/onboard-new-user.png"</img>
           </section>
 
-        <section class = "information-architecture-indented5">
-          <button>view all user flows</button>
-          <div class = "site-map-and-content">
-            <h3>Site Map & Content Strategy</h3>
-            <p>I created a site map and detailed the content strategy for further clarity on how the solution would be organized, page by page. I would come to find that rather than being an exhaustive accounting for every page the final product would have, it was more of an overview including the key pages.</P>
-            <p>Laying out the pages and content in this early stage revealed many questions about how the product would develop.</p>
-            <img src ="images/Site Map/site-map.png"</img>
-          </div>
-          <div class = "sketches">
+        <button class = "all-flows">view all user flows</button>
+
+        <!-- <section class = "information-architecture-indented5"> -->
+
+        <div class = "site-map-and-content">
+          <h3>Site Map & Content Strategy</h3>
+          <p>I created a site map and detailed the content strategy for further clarity on how the solution would be organized, page by page. I would come to find that rather than being an exhaustive accounting for every page the final product would have, it was more of an overview including the key pages.</P>
+          <p>Laying out the pages and content in this early stage revealed many questions about how the product would develop.</p>
+        </div>
+        <img class = "sitemap-pic" src ="images/Site Map/site-map.png"</img>
+        <div class = "sketches">
             <h3>Sketches, Lo- Fidelity Wireframes & Prototype</h3>
             <p>I found that there were screens that should be consolidated, some that were not useful and some that were overlooked in sketching, such as the difference between the dashboard of a new user vs that of a returning user and the view of a text input window after a user enters the text and before they proceed to click a link. As a result, my sketches are different from my  lo-fi wireframes but reflect a series of digital iterations after these discoveries and review during a design critique.</p>
             <img class = "early-image"src = "images/Sketches and Wireframes/early-sketch-wireframe.png"</img>
@@ -393,7 +384,7 @@
             <img class = "wireframe5" src = "images/Sketches and Wireframes/note-wireframe.png"</img>
             <img class = "wireframe6" src = "images/Sketches and Wireframes/product-wireframe.png"</img>
           </div>
-          <div class = "user-testing">
+        <div class = "user-testing">
             <h3>User Testing Lo-Fi Wireframes</h3>
             <p>I recruited three user testers to evaluate the protoype’s usability. They were asked to complete three tasks.
               <ul>
