Committing to troubleshoot .wireframes grid.

--- a/projectgridversion.html
+++ b/projectgridversion.html
@@ -372,18 +372,27 @@
           <p>I created a site map and detailed the content strategy for further clarity on how the solution would be organized, page by page. I would come to find that rather than being an exhaustive accounting for every page the final product would have, it was more of an overview including the key pages.</P>
           <p>Laying out the pages and content in this early stage revealed many questions about how the product would develop.</p>
         </div>
+
         <img class = "sitemap-pic" src ="images/Site Map/site-map.png"</img>
-        <div class = "sketches">
+
+        <div class = "sketches-intro">
             <h3>Sketches, Lo- Fidelity Wireframes & Prototype</h3>
             <p>I found that there were screens that should be consolidated, some that were not useful and some that were overlooked in sketching, such as the difference between the dashboard of a new user vs that of a returning user and the view of a text input window after a user enters the text and before they proceed to click a link. As a result, my sketches are different from my  lo-fi wireframes but reflect a series of digital iterations after these discoveries and review during a design critique.</p>
-            <img class = "early-image"src = "images/Sketches and Wireframes/early-sketch-wireframe.png"</img>
+        </div>
+
+        <img class = "early-image"src = "images/Sketches and Wireframes/early-sketch-wireframe.png"</img>
+
+        <div class = "wireframes">
             <img class = "wireframe1" src = "images/Sketches and Wireframes/activity-wireframe.png"</img>
             <img class = "wireframe2" src = "images/Sketches and Wireframes/existing-user-dashboard-wireframe.png"</img>
             <img class = "wireframe3" src = "images/Sketches and Wireframes/new-user-dashboard-wireframe.png"</img>
             <img class = "wireframe4" src = "images/Sketches and Wireframes/new-user-onboarding.png"</img>
             <img class = "wireframe5" src = "images/Sketches and Wireframes/note-wireframe.png"</img>
             <img class = "wireframe6" src = "images/Sketches and Wireframes/product-wireframe.png"</img>
-          </div>
+        </div>
+
+        <button class = "all-wireframes">View all wireframes</button>
+
         <div class = "user-testing">
             <h3>User Testing Lo-Fi Wireframes</h3>
             <p>I recruited three user testers to evaluate the protoype’s usability. They were asked to complete three tasks.
@@ -406,10 +415,9 @@
               <p>I engaged in brainstorming and mindmapping exercised to narrow down naming ideas and settled on Verve because it was a short moniker that embodied the clean energy and vitality the app needed to project.</p>
               <p>The branding should reflect the app’s positioning at the intersection of self care and data while maintaining a clean and sleek interface. </p>
               <img class = "branding-idea" src = "images/Branding/vibrant-color.png"</img>
-              <img class = "branding-idea"  src = "images/Branding/ultra-personal.png"</img>
+              <img class = "branding-idea"  src = "images/Branding/gender-inclusive.png"</img>
               <img class = "branding-idea"  src = "images/Branding/simple-wordmark.png"</img>
               <img class = "branding-idea"  src = "images/Branding/minimal-modern.png"</img>
-              <img class = "branding-idea"  src = "images/Branding/gender-inclusive.png"</img>
               <img class = "moodboard" src = "images/Branding/moodboard.jpg"</img>
             </div>
             <div class = "logo-design">
@@ -441,12 +449,14 @@
             <p>A blue tone palette was preferred by 63% of respondents. This confirmed my early inclinations about colors that would be suitable. I also found that blue was heavily used by competitors and color theory research revealed that this is a reliable and trusted choice, so not an unpopular one.</p>
             <p>Wanting to add more dynamism and depth to my color palette, I tested user response to combining gradients. This was preferred 67% of the time.</p>
             <p>Based on client feedback, I made slight adjustments to the palette and decided to use a gradient shade of blue as the primary color, in combination with a gradient shade of pink, in combination with gray, white, black and yellow.</p>
+          
             <img class = "final-colors" src= "images/Branding/Colors/color1.png"</img>
             <img class = "final-colors"  src= "images/Branding/Colors/color2.png"</img>
             <img class = "final-colors"  src= "images/Branding/Colors/color3.png"</img>
             <img class = "final-colors"  src= "images/Branding/Colors/color4.png"</img>
             <img class = "final-colors"  src= "images/Branding/Colors/color5.png"</img>
             <img class = "final-colors"  src= "images/Branding/Colors/color6.png"</img>
+
             <p>I proceeded to prepare a full style guide that included the color palette along side additional branding guidelines such as typography, logo usage, and iconography. </p>
             <button>View the Style Guide</button>
           </div>
